--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div>
-                <a href="" class="logo">Web<span class="logo-blek">Studio</span></a>
+                <a href="./index.html" class="logo">Web<span class="logo-blek">Studio</span></a>
                 <ul>
                     <li><a href="" class="link">Студия</a></li>
                     <li><a href="" class="link">Портфолио</a></li>
@@ -100,7 +100,7 @@
         </section>
     </main>
     <footer>
-        <a href="" class="logo">Web<span class="logo-blek">Studio</span></a>
+        <a href="./index.html" class="logo">Web<span class="logo-blek">Studio</span></a>
         <address>
             <span class="adress-footer-white">г. Киев, пр-т Леси Украинки, 26</span><br />
             <a href="mailto:info@devstudio.com" class="adress-footer">info@devstudio.com</a><br />
