--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
         <nav>
             <div>
-                <a href="" class="logo">Web<span class="logo-blek">Studio</span></a>
+                <a href="./index.html" class="logo">Web<span class="logo-blek">Studio</span></a>
                 <ul>
                     <li><a href="" class="link">Студия</a></li>
-                    <li><a href="./index.html" class="link">Портфолио</a></li>
+                    <li><a href="./portfolio.html" class="link">Портфолио</a></li>
                     <li><a href="" class="link">Контакты</a></li>
                 </ul>
             </div>
@@ -84,7 +84,7 @@
         </section>
     </main>
     <footer>
-        <a href="" class="logo">Web<span class="logo-blek">Studio</span></a>
+        <a href="./index.html" class="logo">Web<span class="logo-blek">Studio</span></a>
         <address>
             <span class="adress-footer-white">г. Киев, пр-т Леси Украинки, 26</span><br />
             <a href="mailto:info@devstudio.com" class="adress-footer">info@devstudio.com</a><br />
